<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.LoginFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:id="@+id/linearLayout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_email"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayout_password"
                style="@style/TextInputLayout"
                android:hint="@string/insert_password"
                app:hintTextColor="#515C6F"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_buttons"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="@dimen/_300sdp">

            <Button
                android:id="@+id/buttonLogin"
                style="@style/button_login"
                android:layout_width="204dp"
                android:text="@string/old_user"
                app:layout_constraintEnd_toStartOf="@+id/buttonRegister"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonRegister"
                style="@style/button_login"
                android:layout_width="204dp"
                android:text="@string/new_user"
                app:layout_constraintBottom_toBottomOf="@+id/buttonLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonLogin"
                app:layout_constraintTop_toTopOf="@+id/buttonLogin" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>