<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
<!--  I Use the linear to Root the view until support me present the complex Design
below by vertical  any way the constraint  layout easy for control distinction of the view  use tag constraint
    like layout_constraintEnd_toEndOf ant pass id or parent -->
    <LinearLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="clip_horizontal|center|fill_horizontal|center_vertical|fill_vertical"
        android:orientation="vertical"
        tools:context=".shoes.shoeDetailFragment">

        <TextView
            android:layout_marginTop="@dimen/_50sdp"
            android:id="@+id/tv_header"
            style="@style/textstyle_heder"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_your_shoe_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_name"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tv_name_shoe"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:gravity="fill_horizontal"
                        android:text="@string/name"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/et_name"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="204dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5ssp"
                        android:hint="@string/insert_name_of_shoe"
                        android:inputType="text"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_name_shoe"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_name_shoe" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_begin="20dp" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_company"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tv_name_company"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:gravity="fill_horizontal"
                        android:text="@string/Company"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/et_company"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_company"
                        android:layout_width="204dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5ssp"
                        android:hint="@string/insert_name_of_company_it_is_have"
                        android:inputType="text"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_name_company"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_name_company" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_size"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tv_name_size"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:gravity="fill_horizontal"
                        android:text="@string/size"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/et_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_size"
                        android:layout_width="204dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5ssp"
                        android:hint="@string/insert_size"
                        android:inputType="number"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_name_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_name_size" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_Description"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tv_name_Description"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="wrap_content"
                        android:gravity="fill_horizontal"
                        android:text="@string/Description"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/et_Description"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_Description"
                        android:layout_width="204dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_5ssp"
                        android:hint="@string/insert_name_of_company_it_is_have"
                        android:inputType="text"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_name_Description"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_name_Description" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_buttons"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/_70sdp"

            >

            <Button
                android:id="@+id/buttonCancel"
                style="@style/button_login"
                android:layout_width="204dp"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/buttonSave"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonSave"
                style="@style/button_login"
                android:layout_width="204dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonCancel"
                app:layout_constraintTop_toTopOf="@+id/buttonCancel" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</layout>